# scd

./: .gitignore  .scd.env.example  pyproject.toml
scd/: __init__.py  __main__.py  cache.py  cli.py  config.py  models.py
scd/ai/: client.py  prompts.py  rate_limiter.py  tools.py
scd/ai/prompts/: __init__.py  dir_summary.py  directory_match.py  file_summary.py  function_compare.py
scd/pipeline/: compare_cache.py  dir_summarizer.py  directory_matcher.py  file_summarizer.py  function_comparer.py  orchestrator.py  orphan_handler.py
scd/reporter/: markdown_template.py  reporter.py
scd/scanner/: ignore_rules.py  repo_scanner.py
